--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             <h4> © Todos los derechos reservados 2023</h4>
         </div>
 
-        <div class="gallery-container">
-            <div class="photo-gallery">
+        <div class="galeria-container">
+            <div class="fotos-galeria">
                 <img src="./images/imagen1.webp" alt="Foto con grid">
                 <img src="./images/imagen2.jpg" alt="Foto con grid">
                 <img src="./images/imagen3.webp" alt="Foto con grid">
