arreglo de codigos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,72 +52,78 @@
         </div>
       </nav>
     </header>
-    <main>
-        <h1>Contactate con nosotros</h1>
-        <h2>Envianos tu consulta</h2>
-        <p>Escribinos para coordinar una
-            visita y conocer nuestros productos</p>
 
-                <ul class="text-cont">
-                    <li> TELEFONO: + 54 9 341-5555555 </li>
-                    <li> EMAIL: alexisbustamante2013@gmail.com </li>
-                </ul>
-
-                <form>
-                  <div class="email mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
-                  </div>
-                  <div class="contraseña mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Nombre y Apellido</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1">
-                  </div>
-                  <div class="mensajes">
-                    <p>
-                      <label> 
-                        Mensaje
-                        <br>
-                        <span data-name="message">
-                          <textarea cols="40" rows="10" aria-invalid="false" placeholder="Mensaje" name="message"></textarea>
-                        </span>
-                      </label>
-                    </p>
-                  </div>
-                  <button type="submit" class=" button-span btn btn-primary">Enviar</button>
-                </form>
-    </main> 
+    <main class="text-center mt-5">
+      <h1>Contactate con nosotros</h1>
+      <h2>Envianos tu consulta</h2>
+      <p>Escribinos para coordinar una visita y conocer nuestros productos</p>
+  
+      <ul class="text-cont list-unstyled">
+          <li> TELEFONO: + 54 9 341-5555555 </li>
+          <li> EMAIL: alexisbustamante2013@gmail.com </li>
+      </ul>
+  
+      <form class="mt-4">
+          <div class="email mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+          </div>
+          <div class="contraseña mb-3">
+              <label for="exampleInputPassword1" class="form-label">Nombre y Apellido</label>
+              <input type="text" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mensajes">
+              <label for="message">Mensaje</label>
+              <textarea class="form-control" id="message" rows="5" placeholder="Mensaje"></textarea>
+          </div>
+          <button type="submit" class="button-span btn btn-primary mt-3">Enviar</button>
+      </form>
+  </main>
+  
+  
         
     <section>
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d214269.0913165688!2d-60.696639500000046!3d-32.9522093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b6539335d7d75b%3A0xec4086e90258a557!2sRosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1691603456281!5m2!1ses-419!2sar" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <footer>
-        <img class="logo-2" src="../images/Logo.png" alt="">
-        <div class="links">
-            <h4> © Todos los derechos reservados 2023</h4>
-        </div>
-    
-        <div class="links">
-            <div class="socials">
-                <a href="#">
-                    <div class="social">
-                        <img src="../images/s1.svg" alt="">
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="social">
-                        <img src="../images/s2.svg" alt="">
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="social">
-                        <img src="../images/s3.svg" alt="">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </footer>
+      <img class="logo-2" src="../images/Logo.png" alt="">
+      <div class="links">
+          <h4> © Todos los derechos reservados 2023</h4>
+      </div>
+  
+      <div class="links">
+          <div class="socials">
+              <a href="#">
+                  <div class="social">
+                      <img src="../images/s1.svg" alt="">
+                  </div>
+              </a>
+              <a href="#">
+                  <div class="social">
+                      <img src="../images/s2.svg" alt="">
+                  </div>
+              </a>
+              <a href="#">
+                  <div class="social">
+                      <img src="../images/s3.svg" alt="">
+                  </div>
+              </a>
+          </div>
+      </div>
+
+      <div class="galeria-container">
+          <div class="fotos-galeria">
+              <img src="../images/imagen1.webp" alt="Foto con grid">
+              <img src="../images/imagen2.jpg" alt="Foto con grid">
+              <img src="../images/imagen3.webp" alt="Foto con grid">
+              <img src="../images/imagen4.webp" alt="Foto con grid">
+              <img src="../images/imagen5.webp" alt="Foto con grid">
+              <img src="../images/imagen6.webp" alt="Foto con grid">
+          </div>
+      </div>
+  </footer>
     <script src="../styles/bootstrap.bundle.min.js"></script>
 </body>
 </html>
