--- a/pages/mates.html
+++ b/pages/mates.html
@@ -91,32 +91,43 @@
         </section>
     </main>
 
-        <footer>
-            <img class="logo-2" src="../images/Logo.png" alt="">
-            <div class="links">
-                <h4> © Todos los derechos reservados 2023</h4>
-            </div>
-        
-            <div class="links">
-                <div class="socials">
-                    <a href="#">
-                        <div class="social">
-                            <img src="../images/s1.svg" alt="">
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="social">
-                            <img src="../images/s2.svg" alt="">
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="social">
-                            <img src="../images/s3.svg" alt="">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </footer>
+    <footer>
+      <img class="logo-2" src="../images/Logo.png" alt="">
+      <div class="links">
+          <h4> © Todos los derechos reservados 2023</h4>
+      </div>
+  
+      <div class="links">
+          <div class="socials">
+              <a href="#">
+                  <div class="social">
+                      <img src="../images/s1.svg" alt="">
+                  </div>
+              </a>
+              <a href="#">
+                  <div class="social">
+                      <img src="../images/s2.svg" alt="">
+                  </div>
+              </a>
+              <a href="#">
+                  <div class="social">
+                      <img src="../images/s3.svg" alt="">
+                  </div>
+              </a>
+          </div>
+      </div>
+
+      <div class="galeria-container">
+          <div class="fotos-galeria">
+              <img src="../images/imagen1.webp" alt="Foto con grid">
+              <img src="../images/imagen2.jpg" alt="Foto con grid">
+              <img src="../images/imagen3.webp" alt="Foto con grid">
+              <img src="../images/imagen4.webp" alt="Foto con grid">
+              <img src="../images/imagen5.webp" alt="Foto con grid">
+              <img src="../images/imagen6.webp" alt="Foto con grid">
+          </div>
+      </div>
+  </footer>
         <script src="../styles/bootstrap.bundle.min.js"></script>
 </body>
 </html>
