--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,7 @@
           <li> EMAIL: alexisbustamante2013@gmail.com </li>
       </ul>
   
-      <form class="mt-4">
+      <form class="formu-cont mt-4">
           <div class="email mb-3">
               <label for="exampleInputEmail1" class="form-label">Email</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
