arreglo de codigos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="Descubre nuestra amplia selección de mates de alta calidad. ¡Disfruta de la tradición y el sabor auténtico en cada sorbo!" />
-    <meta name="keywords" content="Mates, Mates de calabaza, Mates de madera, Mates de vidrio, Accesorios para mates, Bombillas para mate, Yerba mate, Materas, Mates personalizados, Mates tradicionales, Mates artesanales, Mates con diseños, Mates de lujo, Mates grabados, Mates de colección, Mates argentinos, Mates uruguayos, Mates paraguayos, Mate amargo, Cebadores de mate, Cuidado de mates, Tienda de mates, Comprar mates en línea, Regalos de mates, Mate y salud, Preparación de mate, Mates ecológicos, Mates de cerámica, Envío de mates">
+    <meta name="keywords" content="Mates, Mates de calabaza, Mates de madera, Mates de vidrio, Accesorios para mates, Bombillas para mate, Yerba mate, Materas, Mates personalizados, Mates tradicionales, Mates artesanales, Mates con diseños, Mates de lujo, Yerberas, Mates de colección, Mates argentinos, Mates uruguayos, Mates paraguayos, Mate amargo, Cebadores de mate, Cuidado de mates, Tienda de mates, Comprar mates en línea, Regalos de mates, Mate y salud, Preparación de mate, Mates ecológicos, Mates de cerámica, Envío de mates">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
