correccion de archivos

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <!--Img logo prin-->
           <a class="navbar-brand" href="#">
-            <img class="logo" src="../images/Logo.png" alt="">
+            <img class="logo" src="../images/Logo.png" alt="Logo de la empresa">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
     </main>
 
     <footer>
-      <img class="logo-2" src="../images/Logo.png" alt="">
+      <img class="logo-2" src="../images/Logo.png" alt="Logo de la empresa">
       <div class="links">
           <h4> © Todos los derechos reservados 2023</h4>
       </div>
@@ -87,17 +87,17 @@
           <div class="socials">
               <a href="#">
                   <div class="social">
-                      <img src="../images/s1.svg" alt="">
+                      <img src="../images/s1.svg" alt="Logo red social">
                   </div>
               </a>
               <a href="#">
                   <div class="social">
-                      <img src="../images/s2.svg" alt="">
+                      <img src="../images/s2.svg" alt="Logo red social">
                   </div>
               </a>
               <a href="#">
                   <div class="social">
-                      <img src="../images/s3.svg" alt="">
+                      <img src="../images/s3.svg" alt="Logo red social">
                   </div>
               </a>
           </div>
