--- a/pages/combos.html
+++ b/pages/combos.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <!--Img logo prin-->
           <a class="navbar-brand" href="#">
-            <img class="logo" src="../images/Logo.png" alt="">
+            <img class="logo" src="../images/Logo.png" alt="Logo de la empresa">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
         <section>
             <article class="flex-conteiner">
                 <div class="caja-mates">
-                    <img  class="img" src="../images/Combo 1.jpg" alt="" >
+                    <img  class="img" src="../images/Combo 1.jpg" alt="Fotyo combo 1" >
                     <p class="p-cajas">Mate + Bombilla chata pico de loro
                       <br>
                       $22,450.00
@@ -64,7 +64,7 @@
                 </div>
             
                 <div class="caja-mates">
-                    <img  class="img" src="../images/Combo 2.jpg" alt="" >
+                    <img  class="img" src="../images/Combo 2.jpg" alt="Foto combo Imperial >
                     <p class="p-cajas">Combo 3 Imperial
                       <br>
                       $54,999.00
@@ -76,7 +76,7 @@
     </main>
 
     <footer>
-      <img class="logo-2" src="../images/Logo.png" alt="">
+      <img class="logo-2" src="../images/Logo.png" alt="Logo de la empresa">
       <div class="links">
           <h4> © Todos los derechos reservados 2023</h4>
       </div>
@@ -85,17 +85,17 @@
           <div class="socials">
               <a href="#">
                   <div class="social">
-                      <img src="../images/s1.svg" alt="">
+                      <img src="../images/s1.svg" alt="Logo red social">
                   </div>
               </a>
               <a href="#">
                   <div class="social">
-                      <img src="../images/s2.svg" alt="">
+                      <img src="../images/s2.svg" alt="Logo red social">
                   </div>
               </a>
               <a href="#">
                   <div class="social">
-                      <img src="../images/s3.svg" alt="">
+                      <img src="../images/s3.svg" alt="Logo red social">
                   </div>
               </a>
           </div>
