--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+     />
     <link rel="stylesheet" href="./styles/style.css">
     <title>Inicio - Maxi Mates</title>
 </head>
@@ -18,7 +22,7 @@
             <div class="container-fluid">
                 <!--Img logo prin-->
               <a class=" navbar-brand" href="#">
-                <img class="logo" src="./images/Logo.png" alt="Logo de la empresa">
+                <img class="logo animate__animated animate__bounceInLeft" src="./images/Logo.png" alt="Logo de la empresa">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
