--- a/pages/acerca-de-nosotros.html
+++ b/pages/acerca-de-nosotros.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+     />
     <link rel="stylesheet" href="../styles/style.css">
     <title> Nosotros - Maxi Mates</title>
 </head>
@@ -14,7 +18,7 @@
             <div class="container-fluid">
                 <!--Img logo prin-->
               <a class="navbar-brand" href="#">
-                <img class="logo" src="../images/Logo.png" alt="Logo de la empresa">
+                <img class="logo animate__animated animate__bounceInLeft" src="../images/Logo.png" alt="Logo de la empresa">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,23 +58,21 @@
     </header>
     <main>
         <h1>Acerca de nosotros</h1>
-        <p class="txt-nos"> Somos un emprendimiento familiar dedicados a la distribución y comercialización de artículos relacionados a una de las 
-            tradiciones de mayor consumo en el territorio nacional como lo es el Mate.
+        <p class="txt-nos">Somos un emprendimiento familiar dedicados a la distribución y comercialización de artículos relacionados con una de las tradiciones de mayor consumo en el territorio nacional, como lo es el Mate.
+          <br>
+          Nuestra misión es ofrecer productos vinculados a la cultura del mate a precios atractivos, cumpliendo con altos estándares de calidad.
+          <br>
+          Buscamos satisfacer a nuestros clientes con una amplia gama de productos para así ser líderes en un mercado que crece cada vez más, no solo dentro de nuestro país, sino también en otras latitudes.</p>
+
+          <p class="txt-nos">Nos fundamentamos en 4 valores que creemos han sido clave en el desarrollo de nuestro modelo de negocio: Responsabilidad, Calidad, Vocación de servicio a clientes y Honestidad.
             <br>
-            Nuestra misión es Ofrecer productos vinculados a la cultura del mate a precios atractivos cumpliendo con altos estándares de 
-            calidad.
+            MISIÓN: Ofrecer productos relacionados con la cultura del mate a precios atractivos, cumpliendo con altos estándares de calidad.
             <br>
-            Buscamos satisfacer a nuestros clientes con una amplia gama de productos para así ser líderes en un mercado que crece cada vez 
-            más no solo dentro de nuestro país, si no también, en otras latitudes. </p>
-        <p class="txt-nos">Nos fundamentamos en 4 valores los cuales creemos han sido claves en el desarrollo de nuestro modelo de negocio: Responsabilidad, Calidad, Vocación de servicio a clientes y Honestidad.
-           <br>
-            MISIÓN: Ofrecer productos relacionados a la cultura del mate a precios atractivos cumpliendo con altos estándares de calidad.
-            <br>
-            VISIÓN: Buscamos satisfacer a nuestros clientes con una amplia cartera de productos para así ser líderes en la distribución de todo aquello que esté relacionado con el mate.
+            VISIÓN: Buscamos satisfacer a nuestros clientes con una amplia gama de productos para ser líderes en la distribución de todo aquello que esté relacionado con el mate.
             <br>
             VALORES: Responsabilidad, Calidad, Servicio y Honestidad.
-        </p>
-
+            </p>
+            
         <img class="img-nos" src="../images/Logo.png" alt="Logo de la empresa">
 
     </main>
