--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+     />
     <link rel="stylesheet" href="../styles/style.css">
     <title> Contactos - Maxi Mates</title>
 </head>
@@ -14,7 +18,7 @@
         <div class="container-fluid">
             <!--Img logo prin-->
           <a class="navbar-brand" href="#">
-            <img class="logo" src="../images/Logo.png" alt="Logo de la empresa">
+            <img class="logo animate__animated animate__bounceInLeft" src="../images/Logo.png" alt="Logo de la empresa">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,13 +58,13 @@
     </header>
 
     <main class="text-center mt-5">
-      <h1>Contactate con nosotros</h1>
-      <h2>Envianos tu consulta</h2>
-      <p>Escribinos para coordinar una visita y conocer nuestros productos</p>
-  
+      <h1>Contáctate con nosotros</h1>
+      <h2>Envíanos tu consulta</h2>
+      <p>Escríbenos para coordinar una visita y conocer nuestros productos.</p>
+
       <ul class="text-cont list-unstyled">
-          <li> TELEFONO: + 54 9 341-5555555 </li>
-          <li> EMAIL: alexisbustamante2013@gmail.com </li>
+        <li>TELÉFONO: +54 9 341-5555555</li>
+        <li>EMAIL: alexisbustamante2013@gmail.com</li>
       </ul>
   
       <form class="mb-4">
