--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <!--Img logo prin-->
           <a class="navbar-brand" href="#">
-            <img class="logo" src="../images/Logo.png" alt="Logo de la empresa">
+            <img class="logo animate__animated animate__bounceInLeft" src="../images/Logo.png" alt="Logo de la empresa">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
