--- a/pages/acerca-de-nosotros.html
+++ b/pages/acerca-de-nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Descubre quiénes somos en Matimates. Conoce nuestra historia, valores y misión, y descubre cómo hemos evolucionado para servir a nuestros clientes de manera excepcional."
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
