--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Encuentra respuestas de las Preguntas Frecuentes proporciona soluciones a problemas comunes y aclaraciones sobre nuestros productos o servicios.">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
