--- a/pages/acerca-de-nosotros.html
+++ b/pages/acerca-de-nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <meta name="description" content="Descubre quiénes somos en Matimates. Conoce nuestra historia, valores y misión, y descubre cómo hemos evolucionado para servir a nuestros clientes de manera excepcional."
+    <meta name="description" content="Descubre quiénes somos en Matimates. Conoce nuestra historia, valores y misión, y descubre cómo hemos evolucionado para servir a nuestros clientes de manera excepcional.">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
@@ -14,6 +14,7 @@
     <title> Nosotros - Maxi Mates</title>
 </head>
 <body>
+
   <header>
     <nav class="menu navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -57,6 +58,7 @@
       </div>
     </nav>
   </header>
+
     <main>
         <h1>Acerca de nosotros</h1>
         <p class="txt-nos">Somos un emprendimiento familiar dedicados a la distribución y comercialización de artículos relacionados con una de las tradiciones de mayor consumo en el territorio nacional, como lo es el Mate.
