--- a/pages/acerca-de-nosotros.html
+++ b/pages/acerca-de-nosotros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <meta name="description" content="Descubre quiénes somos en Matimates. Conoce nuestra historia, valores y misión, y descubre cómo hemos evolucionado para servir a nuestros clientes de manera excepcional.">
+    <meta name="keywords" content="Quiénes somos, Nuestra historia, Misión de la empresa, Valores corporativos, Equipo dentro de Maximates, Fundadores de la empresa, Nuestra visión, Filosofía de [Nombre de la Empresa], Trayectoria de [Nombre de la Empresa], Compromiso con la calidad, Responsabilidad social, Innovación en [tu industria], Cultura de la empresa, Nuestros logros, Reconocimientos de la empresa, Premios y distinciones, Equipo directivo, Liderazgo de Maximates, Ética empresarial, Historia de éxito, Compromiso con la comunidad, Nuestro propósito, Impacto social, Filosofía de sostenibilidad, Evolución de la empresa, Valores corporativos, Nuestro legado, Enfoque en el cliente, Nuestra pasión, Colaboraciones y alianzas">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
