--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <meta name="description" content="Encuentra respuestas de las Preguntas Frecuentes proporciona soluciones a problemas comunes y aclaraciones sobre nuestros productos o servicios.">
+    <meta name="keywords" content="Ayuda en línea, Soporte al cliente, Asistencia técnica, Preguntas frecuentes, Guías de usuario, Solución de problemas, Base de conocimiento, Ayuda y asesoramiento, Ayuda para principiantes, Tutorial paso a paso, Resolución de problemas comunes, Soporte en vivo, Soporte por correo electrónico, Soporte por chat, Asistencia telefónica, Soporte técnico experto, Asistencia 24/7, Soporte personalizado, Recursos de aprendizaje, Artículos de ayuda, Centro de asistencia, Servicio al cliente, Problemas y soluciones, Cómo hacerlo, Resolución de dudas, Asistencia en Maximates, Troubleshooting, Helpdesk, Support tickets, Contacto de ayuda">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
