--- a/pages/bombillas.html
+++ b/pages/bombillas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y mas, estas son las joyas de nuestra colección que no querrás perderte." >
+    <meta name="keywords" content="Bombillas para mates, Bombillas de mate, Bombillas de acero inoxidable, Bombillas de aluminio, Bombillas de bronce, Bombillas con filtro, Bombillas rectas, Bombillas curvas, Bombillas con resorte, Bombillas de diseño, Bombillas tradicionales, Bombillas de colores, Bombillas con decoración, Bombillas para mate argentino, Bombillas para mate uruguayo, Bombillas para mate paraguayo, Bombillas para mates, Bombillas de calidad, Bombillas de larga duración, Bombillas resistentes a la corrosión, Bombillas de primera calidad, Bombillas anti-obstrucción, Bombillas ecológicas, Comprar bombillas para mates, Marcas de bombillas para mates, Materiales de bombillas, Cómo elegir una bombilla para mate, Mantenimiento de bombillas, Limpieza de bombillas de mate, Cómo usar una bombilla de mate">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
