--- a/pages/combos.html
+++ b/pages/combos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y mas, estas son las joyas de nuestra colección que no querrás perderte." >
+    <meta name="keywords" content="Combos para mates, Kit de mate, Combos de mate y yerba, Combos de mate completos, Ofertas de mate, Comprar combo de mate, Accesorios de mate, Combo de mate y bombilla, Combo mate argentino, Combo mate uruguayo, Combo mate paraguayo, Combo mate brasileño, Mate y termo, Mate y azúcar, Mate y dulces, Combo de mate para regalo, Mate y galletas, Set de mate y yerba, Comprar combo de mate en línea, Combinación de mate y accesorios, Combo de mate personalizado, Marcas de combos para mates, Ofertas especiales de mate, Combo mate premium, Materiales de combo de mate, Combo de mate de lujo, Mejores combos para mates, Combo de mate para principiantes, Combo de mate para expertos, Comentarios de combos para mates">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
