--- a/pages/yerberas.html
+++ b/pages/yerberas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y mas, estas son las joyas de nuestra colección que no querrás perderte." >
+    <meta name="keywords" content="Yerba mate, Azucareras para mate, Yerba mate argentina, Yerba mate uruguaya, Yerba mate paraguaya, Yerba mate brasileña, Marcas de yerba mate, Comprar yerba mate, Yerba mate suelta, Yerba mate en saquitos, Azucareras para mate de diseño, Azucareras de cerámica, Azucareras de madera, Azucareras de metal, Comprar azucarera para mate, Accesorios para mate, Yerba mate y azúcar, Yerba mate y azucareras, Combinación de mate y azúcar, Kit de mate completo, Comprar yerba mate en línea, Marcas de azucareras para mate, Yerba mate de calidad, Azucareras de lujo, Azucareras decorativas, Yerba mate tradicional, Yerba mate premium, Yerba mate ecológica, Azucareras resistentes al calor, Yerba mate con azúcar">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
