--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <meta name="description" content="Información de contacto principal de la Maximates. Dirección, número de teléfono y correo electrónico para consultas generales.">
+    <meta name="description" content="Información de contacto principal de Maximates. Dirección, número de teléfono y correo electrónico para consultas generales.">
+    <meta name="keywords" content="Contacto, Información de contacto, Correo electrónico de contacto, Número de teléfono, Dirección de correo electrónico, Formulario de contacto, Dirección de la empresa, Horarios de atención, Ubicación, Mapa de ubicación, Preguntas o consultas, Soporte al cliente, Servicio al cliente, Chat en vivo, Asistencia técnica, Contacto directo, Contacto telefónico, Contacto por email, Consultas generales, Contacto empresarial, Equipo de ventas, Servicio postventa, Contáctanos, Formulario de consulta, Contacto rápido, Contacto de emergencia, Contacto personalizado, Información de la empresa, Redes sociales de contacto, Página de contacto">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
