--- a/pages/materas.html
+++ b/pages/materas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y mas, estas son las joyas de nuestra colección que no querrás perderte." >
+    <meta name="description" content="Explora nuestra amplia selección de materas para mates, diseñadas para combinar funcionalidad y estilo. Encuentra la matera perfecta para disfrutar de tu mate favorito con un toque personal." />
     <meta name="keywords" content="Materas para mates, Materas de diseño, Materas de cerámica, Materas de madera, Materas de metal, Materas de colores, Materas de estilo rústico, Materas artesanales, Materas de calidad, Comprar matera para mate, Materas con diseños tradicionales, Materas personalizadas, Marcas de materas, Materas decorativas, Materas con tapa, Materas con bombilla, Materas de cerámica esmaltada, Materas vintage, Materas modernas, Materas de lujo, Materas de exterior, Materas de interior, Materas resistentes al calor, Materas para regalos, Materas para uso diario, Materas para coleccionistas, Materas con grabados, Cómo elegir una matera para mate, Mantenimiento de materas, Limpieza de materas para mate">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
