--- a/pages/termos.html
+++ b/pages/termos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y mas, estas son las joyas de nuestra colección que no querrás perderte." >
+    <meta name="description" content="Descubre nuestra amplia selección de termos para mates de alta calidad. Mantén tu mate caliente por más tiempo con nuestros termos elegantes y funcionales." />
     <meta name="keywords" content="Termos para mates, Termo mate, Termos de acero inoxidable, Termos de cuero, Termos de aluminio, Termos de vidrio, Termos de diseño, Termos de colores, Termos de capacidad, Termos térmicos, Comprar termo para mate, Accesorios de mate, Funda para termo, Marcas de termos para mates, Termos con bombilla, Termo y mate, Termo para viajes, Termos para cebador, Termo con tapa mate, Termo con filtro, Comprar termo para mate en línea, Termos personalizados, Cómo usar un termo para mate, Mantenimiento de termos, Limpieza de termos para mate, Mejores termos para mates, Termos resistentes a la corrosión, Termos de alta calidad, Termos de larga duración, Termos ecológicos">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
