--- a/pages/mates.html
+++ b/pages/mates.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y mas, estas son las joyas de nuestra colección que no querrás perderte." >
+    <meta name="description" content="Destacamos nuestros productos estrella en MaxiMates. Desde Mates hasta Materas y muchas cosas mas, estas son las joyas de nuestra colección que no querrás perderte." >
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link
     rel="stylesheet"
