correccion de trabajo

--- a/pages/combos.html
+++ b/pages/combos.html
@@ -68,14 +68,14 @@
                       $22,450.00
                     </p>
                 </div>
-            
+
                 <div class="caja-mates">
-                    <img  class="img" src="../images/Combo 2.jpg" alt="Foto combo Imperial >
-                    <p class="p-cajas">Combo 3 Imperial
-                      <br>
-                      $54,999.00
-                    </p>
-                </div>
+                  <img  class="img" src="../images/Combo 2.jpg" alt="Fotyo combo 1" >
+                  <p class="p-cajas"> Combo 3 Imperial
+                    <br>
+                    $54,999.00
+                  </p>
+              </div>
                 
             </article>
         </section>
