--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,17 +69,17 @@
         <li>EMAIL: alexisbustamante2013@gmail.com</li>
       </ul>
 
-      <div class="container">
-        <form class="custom-form p-3">
-            <label for="exampleInputEmail1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
-            <label for="exampleInputPassword1" class="form-label">Nombre y Apellido</label>
-            <input type="text" class="form-control" id="exampleInputPassword1">
-            <label for="message">Mensaje</label>
-            <textarea class="form-control" id="message" rows="5" placeholder="Mensaje"></textarea>
-            <button type="submit" class="button-span btn btn-primary mt-3">Enviar</button>
-        </form>
+      <form class="custom-form p-3 d-flex justify-content-center align-items-center flex-column">
+        <label for="exampleInputEmail1" class="form-label">Email</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+        <label for="" exampleinputpassword1="" class="form-label">Nombre y Apellido</label>
+        <input type="text" class="form-control" id="exampleInputPassword1">
+        <label for="message">Mensaje</label>
+        <textarea class="form-control" id="message" rows="5" placeholder="Mensaje"></textarea>
+        <button type="submit" class="button-span btn btn-primary mt-3">Enviar</button>
+    </form>
+    
     </div>
 
   </main>
