--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -72,7 +72,7 @@
       <form class="custom-form p-3 d-flex justify-content-center align-items-center flex-column">
         <label for="exampleInputEmail1" class="form-label">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+        <div id="emailHelp" class="txt-form form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
         <label for="" exampleinputpassword1="" class="form-label">Nombre y Apellido</label>
         <input type="text" class="form-control" id="exampleInputPassword1">
         <label for="message">Mensaje</label>
