--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -81,7 +81,7 @@
           <li>Maxi Mates despacha los pedidos correctamente embalados. Todos los productos frágiles se embalan con materiales protectores como cartón, burbujas y papel. De esta manera nos aseguramos de que nuestros productos viajen seguros y en perfectas condiciones.</li>
           <li>En caso de encontrar algún producto roto por golpes de la caja, Maxi Mates no se responsabiliza por maltratos de la empresa transportista, por lo tanto, corresponderá asentar el reclamo con la misma.</li>
         </ol>
-    </main>
+      </main> 
       
 
     <footer>
@@ -117,7 +117,7 @@
               <img src="../images/imagen3.webp" alt="Foto con grid">
               <img src="../images/imagen4.webp" alt="Foto con grid">
               <img src="../images/imagen5.webp" alt="Foto con grid">
-              <img src="../images/imagen6.webp" alt="Foto con grid">
+              <img src="../images/imagen6.jpg" alt="Foto con grid">
           </div>
       </div>
   </footer>
