--- a/pages/yerberas.html
+++ b/pages/yerberas.html
@@ -122,7 +122,7 @@
               <img src="../images/imagen3.webp" alt="Foto con grid">
               <img src="../images/imagen4.webp" alt="Foto con grid">
               <img src="../images/imagen5.webp" alt="Foto con grid">
-              <img src="../images/imagen6.webp" alt="Foto con grid">
+              <img src="../images/imagen6.jpg" alt="Foto con grid">
           </div>
       </div>
   </footer>
