--- a/pages/acerca-de-nosotros.html
+++ b/pages/acerca-de-nosotros.html
@@ -60,7 +60,7 @@
     </nav>
   </header>
 
-    <main>
+    <main class="main-nos">
         <h1>Acerca de nosotros</h1>
         <p class="txt-nos">Somos un emprendimiento familiar dedicados a la distribución y comercialización de artículos relacionados con una de las tradiciones de mayor consumo en el territorio nacional, como lo es el Mate.
           <br>
@@ -81,7 +81,7 @@
 
     </main>
 
-    <footer>
+    <footer class="foo-nos">
       <img class="logo-2" src="../images/Logo.png" alt="Logo de la empresa">
       <div class="links">
           <h4> © Todos los derechos reservados 2023</h4>
