--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -59,7 +59,7 @@
       </nav>
     </header>
     
-    <main>
+    <main class="main-ayuda">
       <h1>Preguntas Frecuentes</h1>
         <h2>¿QUÉ FORMAS DE PAGO PUEDO UTILIZAR PARA ABONAR MI COMPRA?</h2>
         <ol>
@@ -84,7 +84,7 @@
       </main> 
       
 
-    <footer>
+    <footer class="ayuda-footer">
       <img class="logo-2" src="../images/Logo.png" alt="Logo de la empresa">
       <div class="links">
           <h4> © Todos los derechos reservados 2023</h4>
