--- a/pages/bombillas.html
+++ b/pages/bombillas.html
@@ -58,7 +58,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main-produc">
         <section>
             <article class="flex-conteiner">
                 <div class="caja-mates">
@@ -97,7 +97,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="produc-foo">
       <img class="logo-2" src="../images/Logo.png" alt="Logo de la empresa">
       <div class="links">
           <h4> © Todos los derechos reservados 2023</h4>
