--- a/pages/yerberas.html
+++ b/pages/yerberas.html
@@ -58,7 +58,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main-produc">
         <section>
             <article class="flex-conteiner">
                 <div class="caja-mates">
@@ -89,7 +89,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="produc-foo">
       <img class="logo-2" src="../images/Logo.png" alt="Logo de la empresa">
       <div class="links">
           <h4> © Todos los derechos reservados 2023</h4>
